--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <header class="container-fluid" id="header">
-      <nav class="navbar navbar-expand-md custom-navbar">
+      <nav id="nav" class="navbar navbar-expand-md custom-navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="./index.html"
             ><img
@@ -60,8 +60,10 @@
                 >Noticias</a
               >
               <a class="nav-link fs-3 me-3" href="../pages/noche.html"
-                >Ubicaciones</a
+                >Estadios</a
               >
+              <a class="nav-link fs-3 me-3" href="">Plantel</a>
+              <a class="nav-link fs-3 me-3" href="">Productos</a>
               <a class="nav-link fs-3 me-3" href="../pages/contacto.html"
                 >Contacto</a
               >
@@ -73,7 +75,7 @@
     <main>
       <section class="section1">
         <article class="article1 container-fluid">
-          <div class="position-absolute top-50 start-50 translate-middle">
+          <div class="position-absolute top-50 start-50 translate-middle divArticle1">
             <img
               src="./media/akdBlanco.png"
               alt=""
@@ -83,23 +85,31 @@
             />
           </div>
         </article>
+        <div class="position-absolute bottom-0 start-50 translate-middle mb-2 divArticle2">
+          <button type="button" class="btn btn-custom btn-lg botonAsociate">Asociate</button>
+        </div>
       </section>
       <section class="section2">
         <article
           class="article21 container-fluid d-flex align-items-center justify-content-evenly"
         >
-          <div>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              height="55px"
-              viewBox="0 -960 960 960"
-              width="55px"
-              fill="#131748"
-            >
-              <path
-                d="M580-240q-42 0-71-29t-29-71q0-42 29-71t71-29q42 0 71 29t29 71q0 42-29 71t-71 29ZM200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Z"
-              />
-            </svg>
+          <div class="d-flex flex-column align-items-center">
+            <div>
+              <h4>Proximos partidos</h4>
+            </div>
+            <div>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                height="55px"
+                viewBox="0 -960 960 960"
+                width="55px"
+                fill="#131748"
+              >
+                <path
+                  d="M580-240q-42 0-71-29t-29-71q0-42 29-71t71-29q42 0 71 29t29 71q0 42-29 71t-71 29ZM200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Z"
+                />
+              </svg>
+            </div>
           </div>
           <div class="d-flex flex-column">
             <div class="d-flex flex-row align-items-center">
@@ -234,28 +244,29 @@
             </div>
           </div>
         </article>
-        <article class="article22 d-flex mt-4 justify-content-evenly">
-          <div
-            class="noticias d-flex flex-column align-items-center ms-2 me-2 col-md-4"
-          >
-            <img src="./media/img12.jpg" alt="" />
-            <h2>Lorem ipsum dolor sit amet</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-              itaque cupiditate, minima mollitia dicta neque molestiae eum,
-              dignissimos
-            </p>
+        <article class="article22 d-flex mt-4 flex-column">
+          <div class="d-flex justify-content-center mb-3">
+            <h1>Noticias</h1>
           </div>
-          <div
-            class="noticias d-flex flex-column align-items-center ms-2 me-2 col-md-4"
-          >
-            <img src="./media/img13.jpg" alt="" />
-            <h2>Lorem ipsum dolor sit amet</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-              itaque cupiditate, minima mollitia dicta neque molestiae eum,
-              dignissimos
-            </p>
+          <div class="d-flex justify-content-evenly">
+            <div
+              class="noticias d-flex flex-column align-items-center ms-2 me-2 col-md-4"
+            >
+              <img src="./media/img12.jpg" alt="" />
+              <h2 class="mt-3 mb-3">Lorem ipsum dolor sit amet</h2>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quam aperiam mollitia! Magni nisi repudiandae sapiente dolorum. Minima dolore consequuntur laborum sint minus consectetur. Id, maxime. Repudiandae laborum saepe praesentium.
+              </p>
+            </div>
+            <div
+              class="noticias d-flex flex-column align-items-center ms-2 me-2 col-md-4"
+            >
+              <img src="./media/img13.jpg" alt="" />
+              <h2 class="mt-3 mb-3">Lorem ipsum dolor sit amet</h2>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quam aperiam mollitia! Magni nisi repudiandae sapiente dolorum. Minima dolore consequuntur laborum sint minus consectetur. Id, maxime. Repudiandae laborum saepe praesentium.
+              </p>
+            </div>
           </div>
         </article>
       </section>
@@ -285,49 +296,88 @@
             </div>
           </div>
         </article>
-        <article class="article32 container-fluid d-flex">
-          <div class="col-6 mt-2 d-flex flex-column align-items-center">
-            <div class="mb-2"><h3>Estadio Norte</h3></div>
-            <div>
+        <article class="article32 container-fluid d-flex p-0">
+          <div class="col-6 mt-2 d-flex flex-column align-items-center p-0">
+            <div class="mt-3"><h4>Estadio Norte</h4></div>
+            <div class=""><h4>"Julio C. Nicieza"</h4></div>
+            <div class="mapContainer mt-3">
+              <div class="mapCobertor">
+                <div class="mapCobertorContent">
+                </div>
+              </div>
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d687.9727451956882!2d-60.012846696695135!3d-34.89218444216697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bea5478b02e6dd%3A0xa441c8039728043e!2sClub%20Racing!5e0!3m2!1ses-419!2sar!4v1721236860011!5m2!1ses-419!2sar"
-                width="380"
-                height="380"
-                style="border: 0"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
               ></iframe>
+              <div class="botonContainer center">
+                <button id="toggleMap" class="toggleBoton">Abrir Mapa</button>
+              </div>
             </div>
           </div>
-          <div class="col-6 mt-2 d-flex flex-column align-items-center">
-            <div class="mb-2"><h3>Estadio Sur</h3></div>
-            <div>
+          <div class="col-6 mt-2 d-flex flex-column align-items-center p-0">
+            <div class="mt-3"><h4>Estadio Sur</h4></div>
+            <div class=""><h4>"Grilon Arena"</h4></div>
+            <div class="mapContainer mt-3">
+              <div class="mapCobertor2">
+                <div class="mapCobertorContent">
+                </div>
+              </div>
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d817.9443985570721!2d-60.01599668730715!3d-34.91203046387368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bea59f707b9939%3A0x608c14875639cef5!2sGRILON%20ARENA!5e0!3m2!1ses-419!2sar!4v1721236806330!5m2!1ses-419!2sar"
-                width="380"
-                height="380"
-                style="border: 0"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
               ></iframe>
+              <div class="botonContainer2 center">
+                <button id="toggleMap2" class="toggleBoton">Abrir Mapa</button>
+              </div>
             </div>
           </div>
         </article>
       </section>
+      <section class="section4">
+        <div class="d-flex flex-column justify-content-center">
+          <div class="d-flex justify-content-center mb-2 mt-2">
+            <h3>Nuestros productos</h3>
+          </div>
+          <div class="carruselProductos">
+            <div class="owl-carouselP owl-theme">
+              <div class="item"><img src="./media/producto.jpg" alt=""><h5>1</h5></div>
+              <div class="item"><img src="./media/producto.jpg" alt=""><h5>2</h5></div>
+              <div class="item"><img src="./media/producto.jpg" alt=""><h5>3</h5></div>
+              <div class="item"><img src="./media/producto.jpg" alt=""><h5>4</h5></div>
+              <div class="item"><img src="./media/producto.jpg" alt=""><h5>5</h5></div>
+              <div class="item"><img src="./media/producto.jpg" alt=""><h5>6</h5></div>
+              <div class="item"><img src="./media/producto.jpg" alt=""><h5>7</h5></div>
+              <div class="item"><img src="./media/producto.jpg" alt=""><h5>8</h5></div>
+              <div class="item"><img src="./media/producto.jpg" alt=""><h5>9</h5></div>
+              <div class="item"><img src="./media/producto.jpg" alt=""><h5>10</h5></div>
+              <div class="item"><img src="./media/producto.jpg" alt=""><h5>11</h5></div>
+              <div class="item"><img src="./media/producto.jpg" alt=""><h5>12</h5></div>
+          </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="container-fluid d-flex justify-content-between">
       <div class="col-4 d-flex justify-content-evenly align-items-center mt-2">
-        <div><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+        <div><a href="https://www.instagram.com/racingchivilcoybasquet?igsh=b2VxM3NpZDN3ZWIy" target="blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
           <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
-        </svg></i></div>
-        <div><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
+        </svg></i></a></div>
+        <div hidden><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
           <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
         </svg></i></div>
-        <div><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+        <div><a href="https://www.facebook.com/share/tUi77monfNoqHzV5/?mibextid=qi2Omg" target="blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
           <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
-        </svg></i></div>
+        </svg></i></a></div>
+        <div><a href="https://whatsapp.com/channel/0029VaelJuY0lwgkAucw9B0U" target="blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+          <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+        </svg></a></div>
+        <div hidden><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tiktok" viewBox="0 0 16 16">
+          <path d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"/>
+        </svg></div>
       </div>
       <div class="d-flex align-items-center">
         <div class="col-4 mt-2">
@@ -337,12 +387,10 @@
             class="escudoRacing"/>
         </div>
       </div>
-      <div class="col-4 mt-2 d-flex flex-column align-items-center justify-content-center">
-        <div><img src="./media/img17_preview_rev_1.png" alt="" class="logosLigas"/></div>
-        <div class="d-flex mt-2">
-          <div class="me-2"><img src="./media/img18_preview_rev_1.png" alt="" class="logosLigas"/></div>
-          <div class="ms-2"><img src="./media/img19_preview_rev_1.png" alt="" class="logosLigas"/></div>
-        </div>
+      <div class="col-4 mt-2 d-flex flex-row align-items-center justify-content-evenly">
+        <div><a href="https://www.instagram.com/basquetchivilcoy/" target="blank"><img src="./media/img17_preview_rev_1.png" alt="" class="logosLigas"/></a></div>
+        <div><a href="https://www.instagram.com/federacionbonaerensebasquet/" target="blank"><img src="./media/img18_preview_rev_1.png" alt="" class="logosLigas"/></a></div>
+        <div><a href="https://www.laliganacional.com.ar/ligaargentina/" target="blank"><img src="./media/img19_preview_rev_1.png" alt="" class="logosLigas"/></a></div>
       </div>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
