--- a/pages/club.html
+++ b/pages/club.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Racing Club Chivilcoy - Club</title>
+    <link rel="shortcut icon" href="../media/img15-khvwTVqnO-transformed_preview_rev_1.png">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -51,7 +52,7 @@
     <main class="mainClub">
       <section class="container-fluid d-flex flex-column align-items-center noticias">
         <h1 class="mb-5">Club</h1>
-        <div class="col-10">
+        <div class="col-12">
             <div class="clearfix">
                 <img src="../media/img13.jpg" class="col-6 float-end mb-2 ms-2 mb-md-3 ms-md-3 p-0" alt="...">
                 <p class="text-center">
