--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Racing Club Chivilcoy</title>
+    <link rel="shortcut icon" href="./media/img15-khvwTVqnO-transformed_preview_rev_1.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -53,9 +54,9 @@
     </header>
     <main>
     <!-- AKD + Asociate -->
-      <section class="section1">
+      <section class="section1" id="section1">
         <article class="article1 container-fluid">
-          <div class="position-absolute top-50 start-50 translate-middle divArticle1">
+          <div class="position-absolute top-50 start-50 translate-middle divArticle1" id="divAKD">
             <img
               src="./media/akdBlanco.png"
               alt=""
@@ -65,14 +66,14 @@
             />
           </div>
         </article>
-        <div class="position-absolute top-50 start-50 translate-middle mb-2 divArticle2" id="botonDeAsociate">
+        <div class="position-relative d-flex justify-content-center divArticle2" id="botonDeAsociate">
           <a href="./pages/asociate.html"><button type="button" class="btn btn-custom btn-sm botonAsociate" id="btnDeAsociate">Asociate</button></a>
         </div>
       </section>
     <!-- Próximos partidos + Noticias -->
       <section class="section2">
         <!-- Próximos Partidos -->
-        <article class="article21 container-fluid p-0 d-flex align-items-center justify-content-evenly pt-2 pb-2">
+        <article class="article21 container-fluid p-0 d-flex align-items-center justify-content-evenly pt-2 pb-2" id="article21">
           <div class="d-flex flex-column align-items-center col-4 p-0" id="proximosPartidos">
             <div>
               <h5 class="tituloProximosPartidos">Próximos partidos</h5>
