--- a/pages/estadios.html
+++ b/pages/estadios.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Racing Club Chivilcoy - Estadios</title>
+    <link rel="shortcut icon" href="../media/img15-khvwTVqnO-transformed_preview_rev_1.png">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
