--- a/index.html
+++ b/index.html
@@ -82,19 +82,19 @@
                 <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#131748">
                   <path d="M360-300q-42 0-71-29t-29-71q0-42 29-71t71-29q42 0 71 29t29 71q0 42-29 71t-71 29ZM200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Z"/>
                 </svg>
-                <h7 class="p-0 partidosTamañoFuente" id="partidoUnoFyH">18/08 - 21:00</h7>
+                <h7 class="p-0 partidosTamañoFuente" id="partidoUnoFyH">15/10 - A definir</h7>
               </div>
               <div class="d-flex flex-row align-items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#131748">
                   <path d="M162-520h114q-6-38-23-71t-43-59q-18 29-30.5 61.5T162-520Zm522 0h114q-5-36-17.5-68.5T750-650q-26 26-43 59t-23 71ZM210-310q26-26 43-59t23-71H162q5 36 17.5 68.5T210-310Zm540 0q18-29 30.5-61.5T798-440H684q6 38 23 71t43 59ZM358-520h82v-278q-53 8-98.5 29.5T260-712q39 38 64.5 86.5T358-520Zm162 0h82q8-57 33.5-105.5T700-712q-36-35-81.5-56.5T520-798v278Zm-80 358v-278h-82q-8 57-33.5 105.5T260-248q36 35 81.5 56.5T440-162Zm80 0q53-8 98.5-29.5T700-248q-39-38-64.5-86.5T602-440h-82v278Zm-40-318Zm0 400q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z"/>
                 </svg>
-                <h7 class="p-0 partidosTamañoFuente" id="partidoUnoRival">Villa Mitre</h7>
+                <h7 class="p-0 partidosTamañoFuente" id="partidoUnoRival">Ciclista</h7>
               </div>
               <div class="d-flex flex-row align-items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#131748">
                   <path d="M480-301q99-80 149.5-154T680-594q0-90-56-148t-144-58q-88 0-144 58t-56 148q0 65 50.5 139T480-301Zm0 101Q339-304 269.5-402T200-594q0-125 78-205.5T480-880q124 0 202 80.5T760-594q0 94-69.5 192T480-200Zm0-320q33 0 56.5-23.5T560-600q0-33-23.5-56.5T480-680q-33 0-56.5 23.5T400-600q0 33 23.5 56.5T480-520ZM200-80v-80h560v80H200Zm280-520Z"/>
                 </svg>
-                <h7 class="p-0 partidosTamañoFuente" id="partidoUnoUbi">Estadio Norte</h7>
+                <h7 class="p-0 partidosTamañoFuente" id="partidoUnoUbi">Estadio Coliseo del Boulevard</h7>
               </div>
             </div>
           </div>
@@ -105,19 +105,19 @@
                 <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#131748">
                   <path d="M360-300q-42 0-71-29t-29-71q0-42 29-71t71-29q42 0 71 29t29 71q0 42-29 71t-71 29ZM200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Z"/>
                 </svg>
-                <h7 class="p-0 partidosTamañoFuente">18/08 - 21:00</h7>
+                <h7 class="p-0 partidosTamañoFuente">23/10 - A definir</h7>
               </div>
               <div class="d-flex flex-row align-items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#131748">
                   <path d="M162-520h114q-6-38-23-71t-43-59q-18 29-30.5 61.5T162-520Zm522 0h114q-5-36-17.5-68.5T750-650q-26 26-43 59t-23 71ZM210-310q26-26 43-59t23-71H162q5 36 17.5 68.5T210-310Zm540 0q18-29 30.5-61.5T798-440H684q6 38 23 71t43 59ZM358-520h82v-278q-53 8-98.5 29.5T260-712q39 38 64.5 86.5T358-520Zm162 0h82q8-57 33.5-105.5T700-712q-36-35-81.5-56.5T520-798v278Zm-80 358v-278h-82q-8 57-33.5 105.5T260-248q36 35 81.5 56.5T440-162Zm80 0q53-8 98.5-29.5T700-248q-39-38-64.5-86.5T602-440h-82v278Zm-40-318Zm0 400q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z"/>
                 </svg>
-                <h7 class="p-0 partidosTamañoFuente">Villa Mitre</h7>
+                <h7 class="p-0 partidosTamañoFuente">Pergamino</h7>
               </div>
               <div class="d-flex flex-row align-items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#131748">
                   <path d="M480-301q99-80 149.5-154T680-594q0-90-56-148t-144-58q-88 0-144 58t-56 148q0 65 50.5 139T480-301Zm0 101Q339-304 269.5-402T200-594q0-125 78-205.5T480-880q124 0 202 80.5T760-594q0 94-69.5 192T480-200Zm0-320q33 0 56.5-23.5T560-600q0-33-23.5-56.5T480-680q-33 0-56.5 23.5T400-600q0 33 23.5 56.5T480-520ZM200-80v-80h560v80H200Zm280-520Z"/>
                 </svg>
-                <h7 class="p-0 partidosTamañoFuente">Estadio Norte</h7>
+                <h7 class="p-0 partidosTamañoFuente">Estadio Pergamino Basquet</h7>
               </div>
             </div>
           </div>
@@ -128,7 +128,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#131748">
                   <path d="M360-300q-42 0-71-29t-29-71q0-42 29-71t71-29q42 0 71 29t29 71q0 42-29 71t-71 29ZM200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Z"/>
                 </svg>
-                <h7 class="p-0 partidosTamañoFuente">18/08 - 21:00</h7>
+                <h7 class="p-0 partidosTamañoFuente">27/10 - A definir</h7>
               </div>
               <div class="d-flex flex-row align-items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#131748">
@@ -140,7 +140,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#131748">
                   <path d="M480-301q99-80 149.5-154T680-594q0-90-56-148t-144-58q-88 0-144 58t-56 148q0 65 50.5 139T480-301Zm0 101Q339-304 269.5-402T200-594q0-125 78-205.5T480-880q124 0 202 80.5T760-594q0 94-69.5 192T480-200Zm0-320q33 0 56.5-23.5T560-600q0-33-23.5-56.5T480-680q-33 0-56.5 23.5T400-600q0 33 23.5 56.5T480-520ZM200-80v-80h560v80H200Zm280-520Z"/>
                 </svg>
-                <h7 class="p-0 partidosTamañoFuente">Estadio Norte</h7>
+                <h7 class="p-0 partidosTamañoFuente">Estadio Norte "Grilon Arena"</h7>
               </div>
             </div>
           </div>
@@ -308,7 +308,7 @@
           <div class="d-flex justify-content-center mt-2">
             <a href="./pages/productos.html" class="nuestrosProductos"><h1>Nuestros productos</h1></a>
           </div>
-          <div class="carruselProductos mt-2">
+          <div class="carruselProductos mt-2 mb-2">
             <div class="owl-carouselP owl-theme">
               <div class="item"><img src="./media/producto.jpg" alt=""></div>
               <div class="item"><img src="./media/producto.jpg" alt=""></div>
@@ -322,7 +322,7 @@
               <div class="item"><img src="./media/producto.jpg" alt=""></div>
               <div class="item"><img src="./media/producto.jpg" alt=""></div>
               <div class="item"><img src="./media/producto.jpg" alt=""></div>
-          </div>
+            </div>
           </div>
         </div>
       </section>
@@ -356,8 +356,10 @@
               </a>
             </div>
             <!-- TikTok -->
-            <div hidden class="col"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tiktok" viewBox="0 0 16 16">
-              <path d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"/></svg>
+            <div class="col d-flex justify-content-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tiktok" viewBox="0 0 16 16">
+              <a href="https://www.tiktok.com/@racingchivilcoybasquet" target="_blank" rel="noopener noreferrer">
+                <path d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"/></svg>
+              </a>
             </div>
           </div>
           <!-- Escudo Racing -->
@@ -386,9 +388,9 @@
             </div>
           </div>
           </article>
-        </section>
-        <!-- FooterSmall -->
-        <section id="footerSmall" class="d-none">
+      </section>
+      <!-- FooterSmall -->
+      <section id="footerSmall" class="d-none">
           <article class="container-fluid d-flex flex-column align-items-center p-0">
             <!-- Escudo Racing -->
             <div class="col-12 py-4 pb-4 ps-4 pe-4 d-flex justify-content-center divEscudoRacing">
@@ -442,7 +444,7 @@
               </div>
             </div>
           </article>
-        </section>
+      </section>
     </footer>
     <div id="matchesContainer"></div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
