--- a/pages/plantel.html
+++ b/pages/plantel.html
@@ -40,8 +40,114 @@
         </div>
       </nav>
     </header>
-    <main class="container-fluid mainPlantel">
-        <h1>Plantel</h1>
+    <main class="container-fluid d-flex flex-column align-items-center mt-2 p-0 mainPlantel">
+      <h1>Plantel</h1>
+      <section class="container-fluid d-flex flex-column flex-md-row p-0 sectionPlantel">
+        <div class="row w-100 justify-content-evenly m-0">
+        <!-- Jugador 1 -->
+        <article class="col-12 col-md-4 p-0 articlePlantel my-2 mx-2">
+          <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
+            <div class="col-6 d-flex justify-content-center">
+              <img class="fotoPlantel" src="../media/Plantel/barrales.jpg" alt="">
+            </div>
+            <div class="col-6 d-flex flex-column align-items-center justify-content-evenly">
+              <h3>Datos:</h3>
+              <div class="d-flex flex-column align-items-start">
+                <h5 class="mt-1 mb-1">Nombre y Apellido: Alejo Barrales</h5>
+                <h5 class="mt-1 mb-1">Edad: 32</h5>
+                <h5 class="mt-1 mb-1">Altura: 1.75m</h5>
+                <h5 class="mt-1 mb-1">Posición: 1</h5>
+              </div>
+            </div>
+          </div>
+        </article>
+        <!-- Jugador 2 -->
+        <article class="col-12 col-md-4 p-0 articlePlantel my-2 mx-2">
+          <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
+            <div class="col-6 d-flex justify-content-center">
+              <img class="fotoPlantel" src="../media/Plantel/peralta.jpg" alt="">
+            </div>
+            <div class="col-6 d-flex flex-column align-items-center justify-content-evenly">
+              <h3>Datos:</h3>
+              <div class="d-flex flex-column align-items-start">
+                <h5 class="mt-1 mb-1">Nombre y Apellido: José Peralta</h5>
+                <h5 class="mt-1 mb-1">Edad: 27</h5>
+                <h5 class="mt-1 mb-1">Altura: 1.90m</h5>
+                <h5 class="mt-1 mb-1">Posición: 4</h5>
+              </div>
+            </div>
+          </div>
+        </article>
+        <!-- Jugador 3 -->
+        <article class="col-12 col-md-4 p-0 articlePlantel my-2 mx-2">
+          <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
+            <div class="col-6 d-flex justify-content-center">
+              <img class="fotoPlantel" src="../media/Plantel/peralta.jpg" alt="">
+            </div>
+            <div class="col-6 d-flex flex-column align-items-center justify-content-evenly">
+              <h3>Datos:</h3>
+              <div class="d-flex flex-column align-items-start">
+                <h5 class="mt-1 mb-1">Nombre y Apellido: José Peralta</h5>
+                <h5 class="mt-1 mb-1">Edad: 27</h5>
+                <h5 class="mt-1 mb-1">Altura: 1.90m</h5>
+                <h5 class="mt-1 mb-1">Posición: 4</h5>
+              </div>
+            </div>
+          </div>
+        </article>
+        <!-- Jugador 4 -->
+        <article class="col-12 col-md-4 p-0 articlePlantel my-2 mx-2">
+          <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
+            <div class="col-6 d-flex justify-content-center">
+              <img class="fotoPlantel" src="../media/Plantel/barrales.jpg" alt="">
+            </div>
+            <div class="col-6 d-flex flex-column align-items-center justify-content-evenly">
+              <h3>Datos:</h3>
+              <div class="d-flex flex-column align-items-start">
+                <h5 class="mt-1 mb-1">Nombre y Apellido: Alejo Barrales</h5>
+                <h5 class="mt-1 mb-1">Edad: 32</h5>
+                <h5 class="mt-1 mb-1">Altura: 1.75m</h5>
+                <h5 class="mt-1 mb-1">Posición: 1</h5>
+              </div>
+            </div>
+          </div>
+        </article>
+        <!-- Jugador 5 -->
+        <article class="col-12 col-md-4 p-0 articlePlantel my-2 mx-2">
+          <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
+            <div class="col-6 d-flex justify-content-center">
+              <img class="fotoPlantel" src="../media/Plantel/peralta.jpg" alt="">
+            </div>
+            <div class="col-6 d-flex flex-column align-items-center justify-content-evenly">
+              <h3>Datos:</h3>
+              <div class="d-flex flex-column align-items-start">
+                <h5 class="mt-1 mb-1">Nombre y Apellido: José Peralta</h5>
+                <h5 class="mt-1 mb-1">Edad: 27</h5>
+                <h5 class="mt-1 mb-1">Altura: 1.90m</h5>
+                <h5 class="mt-1 mb-1">Posición: 4</h5>
+              </div>
+            </div>
+          </div>
+        </article>
+        <!-- Jugador 6 -->
+        <article class="col-12 col-md-4 p-0 articlePlantel my-2 mx-2">
+          <div class="container-fluid d-flex flex-row p-0 my-2 mx-2">
+            <div class="col-6 d-flex justify-content-center">
+              <img class="fotoPlantel" src="../media/Plantel/peralta.jpg" alt="">
+            </div>
+            <div class="col-6 d-flex flex-column align-items-center justify-content-evenly">
+              <h3>Datos:</h3>
+              <div class="d-flex flex-column align-items-start">
+                <h5 class="mt-1 mb-1">Nombre y Apellido: José Peralta</h5>
+                <h5 class="mt-1 mb-1">Edad: 27</h5>
+                <h5 class="mt-1 mb-1">Altura: 1.90m</h5>
+                <h5 class="mt-1 mb-1">Posición: 4</h5>
+              </div>
+            </div>
+          </div>
+        </article>
+        </div>
+      </section>
     </main>
     <footer>
       <!-- FooterLarge -->
