--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
           <!-- Partido 1 -->
           <div class="d-flex flex-column col-4 p-0" id="partido1">
-            <div class="d-flex flex-column align-items-center">
+            <div class="d-flex flex-column align-items-center text-center">
               <div class="d-flex flex-row align-items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#131748">
                   <path d="M360-300q-42 0-71-29t-29-71q0-42 29-71t71-29q42 0 71 29t29 71q0 42-29 71t-71 29ZM200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Z"/>
@@ -100,7 +100,7 @@
           </div>
           <!-- Partido 2 -->
           <div class="d-flex flex-column col-4 p-0" id="partido2">
-            <div class="d-flex flex-column align-items-center">
+            <div class="d-flex flex-column align-items-center text-center">
               <div class="d-flex flex-row align-items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#131748">
                   <path d="M360-300q-42 0-71-29t-29-71q0-42 29-71t71-29q42 0 71 29t29 71q0 42-29 71t-71 29ZM200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Z"/>
@@ -123,7 +123,7 @@
           </div>
           <!-- Partido 3 -->
           <div class="d-none col-3 p-0" id="partido3">
-            <div class="d-flex flex-column align-items-center">
+            <div class="d-flex flex-column align-items-center text-center">
               <div class="d-flex flex-row align-items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#131748">
                   <path d="M360-300q-42 0-71-29t-29-71q0-42 29-71t71-29q42 0 71 29t29 71q0 42-29 71t-71 29ZM200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Z"/>
@@ -152,12 +152,12 @@
           </div>
           <div class="d-flex flex-column flex-sm-row align-items-center">
             <!-- Noticia 1 -->
-             <div class="d-flex justify-content-center col-12 col-md-6">
+             <div class="d-flex justify-content-center col-12 col-md-6 ps-2 pe-2">
               <div class="noticias d-flex flex-column align-items-center text-center my-2">
-                <img src="./media/img12.jpg" alt=""/>
-                <h3 class="mt-3 mb-3">Lorem ipsum dolor sit amet</h3>
+                <img src="./media/WhatsApp Image 2024-09-02 at 15.40.18.jpeg" alt=""/>
+                <h3 class="mt-3 mb-3">Festejo del Día de la Niñez en el Club Racing</h3>
                 <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quam aperiam mollitia! Magni nisi repudiandae sapiente dolorum. Minima dolore consequuntur laborum sint minus consectetur. Id, maxime.
+                  El pasado domingo se llevó a cabo la primera fiesta de la niñez en el Estadio Norte – Julio C. Nicieza.<br>Desde las 15:00Hs, participaron más de 120 padres y otros tantos jugadores/as de la escuela de básquet del Club Racing. 
                 </p>
                 <div>
                   <button type="button" class="btn btn-sm btn-custom" data-bs-toggle="modal" data-bs-target="#modalNoticia1">
@@ -171,13 +171,14 @@
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body clearfix textoModalNoticias">
-                          <img src="../media/img12.jpg" alt="" class="imagenModal col-md-6 float-md-end mb-3 ms-md-3 p-0">
+                          <img src="./media/WhatsApp Image 2024-09-02 at 15.40.18.jpeg" alt="" class="imagenModal col-md-6 float-md-end mb-3 ms-md-3 p-0">
                           <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quam aperiam mollitia! Magni nisi repudiandae sapiente dolorum. Minima dolore consequuntur laborum sint minus consectetur. Id, maxime. Repudiandae laborum saepe praesentium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit perspiciatis repellendus magni. Totam neque aliquam expedita enim quidem, ullam voluptatem aut esse, sunt dolorem architecto laboriosam culpa laborum id tempore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto magnam inventore laborum alias dolorem eligendi, illo obcaecati exercitationem quas sint sequi ex consectetur suscipit excepturi eos Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum at quod alias, velit eaque obcaecati nesciunt ex nisi culpa debitis excepturi saepe facilis illo, dignissimos deserunt eveniet esse nulla asperiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi ipsum accusamus fuga voluptate quidem temporibus rem amet officia atque nam! Numquam, voluptates enim doloribus placeat iure nam debitis tempora quidem? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet sunt ipsa inventore nobis fuga vitae deserunt, ab id minus? Dolorum dolor sapiente odio, mollitia omnis maxime saepe soluta nisi magni.
-                          </p>
-                          <img src="../media/img13.jpg" class="col-md-6 float-md-start mb-3 me-md-3 p-0" alt="">
-                          <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis a doloribus, dicta architecto aspernatur quis illo? Quaerat nulla asperiores nisi pariatur, distinctio modi temporibus esse, non quo dolore corporis illum! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt quaerat fuga ratione magni, nemo reprehenderit quo dolore, natus ullam, error quibusdam quam perspiciatis minus ut repellat suscipit totam? Temporibus, quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quaerat aliquam dolore aut sequi provident id illo! Nobis expedita labore quaerat recusandae! Assumenda dolor doloremque ad eaque corporis suscipit quae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores iusto in sapiente voluptatem distinctio quibusdam exercitationem ut, vero illum, similique commodi expedita at saepe itaque incidunt non tempora voluptatum laboriosam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat tempora accusantium animi molestias possimus officia adipisci similique earum sequi ipsum. Nobis adipisci autem maxime reprehenderit, nisi culpa praesentium placeat quam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad nobis ex, nulla qui et natus magnam provident maiores omnis reiciendis consectetur aliquid odio, amet neque. Blanditiis voluptates saepe inventore accusantium.
+                            El pasado domingo se llevó a cabo la primera fiesta de la niñez en el Estadio Norte – Julio C. Nicieza. <br> <br>
+                            Desde las 15:00Hs, participaron más de 120 padres y otros tantos jugadores/as de la escuela de básquet del Club Racing. <br> <br>
+                            Se realizaron varios juegos de la disciplina acompañados de profesores, cuerpo técnico y la compañía especial de los jugadores de Liga Argentina 2024/25. <br> <br>
+                            También hubo espectáculos, malabares, juegos en donde también participaron los padres, música, sorteos y mucha diversión. <br> <br>
+                            Para finalizar la tarde, compartieron entre todos una gran merienda. <br> <br>
+                            Felicitamos al cuerpo técnico, familias y jugadores del club por hacer que estas iniciativas sean posibles con el único fin de fomentar el desarrollo deportivo. <br> <br>
                           </p>
                           </div>
                         <div class="modal-footer d-flex justify-content-center">
@@ -190,7 +191,7 @@
               </div>
             </div>
             <!-- Noticia 2 -->
-            <div class="d-flex justify-content-center col-12 col-md-6">
+            <div class="d-flex justify-content-center col-12 col-md-6 ps-2 pe-2">
               <div class="noticias d-flex flex-column align-items-center text-center my-2">
                 <img src="./media/img13.jpg" alt="" />
                 <h3 class="mt-3 mb-3">Lorem ipsum dolor sit amet</h3>
