--- a/pages/estadios.html
+++ b/pages/estadios.html
@@ -72,8 +72,10 @@
               </a>
             </div>
             <!-- TikTok -->
-            <div hidden class="col"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tiktok" viewBox="0 0 16 16">
-              <path d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"/></svg>
+            <div class="col d-flex justify-content-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#131748" class="bi bi-tiktok" viewBox="0 0 16 16">
+              <a href="https://www.tiktok.com/@racingchivilcoybasquet" target="_blank" rel="noopener noreferrer">
+                <path fill="#131748" d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"/></svg>
+              </a>
             </div>
           </div>
           <!-- Escudo Racing -->
@@ -135,8 +137,10 @@
                 </a>
               </div>
               <!-- TikTok -->
-              <div hidden class="col p-0 my-2"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tiktok" viewBox="0 0 16 16">
-                <path d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"/></svg>
+              <div class="col p-0 my-2 d-flex justify-content-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#131748" class="bi bi-tiktok" viewBox="0 0 16 16">
+                <a href="https://www.tiktok.com/@racingchivilcoybasquet" target="_blank" rel="noopener noreferrer">
+                  <path fill="#131748" d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"/></svg>
+                </a>
               </div>
               <!-- Liga Chivilcoyana -->
               <div class="col p-0 my-2 d-flex justify-content-center">
