--- a/pages/backend.admin.html
+++ b/pages/backend.admin.html
@@ -5,14 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Backend-Administrador</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
-    />
-    <link
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/backend.css" />
   </head>
@@ -20,10 +16,11 @@
     <section class="container-fluid d-flex justify-content-center my-3">
       <h2>Racing de Chivilcoy - Administrador</h2>
     </section>
-    <section class="container-fluid my-3">
+    <!-- Próximos partidos - FireStore -->
+    <section class="container-fluid my-3 p-0">
+      <!--Próximos partidos - Actualizar-->
       <article class="border">
-        <!--Próximos partidos - Actualizar-->
-        <h4 class="mt-2 text-center">Próximos Partidos</h4>
+        <h2 class="mt-2 text-center">Próximos Partidos</h2>
         <div class="container-fluid d-flex flex-row col-12 mt-2">
           <!--Partido 1 - Actualizar-->
           <div class="col-4 my-2 border">
@@ -157,71 +154,321 @@
           <div class="container-fluid col-12 d-flex flex-row">
             <!--Partido 1 - Guardar-->
             <div class="mt-2 col-4 border my-2">
-              <h5>Partido 1</h5>
+              <h5 id="partido1">Partido 1</h5>
               <div class="mt-2 d-flex flex-row">
                 <div class="mr-2"><h6>Fecha y Hora:</h6></div>
-                <div><h6 id="unoGuardarFyH"></h6></div>
+                <div><h6 id="guardarFyH1"></h6></div>
               </div>
               <div class="mt-2 d-flex flex-row">
                 <div class="mr-2"><h6>Rival:</h6></div>
-                <div><h6 id="unoGuardarRival"></h6></div>
+                <div><h6 id="guardarRival1"></h6></div>
               </div>
               <div class="mt-2 d-flex flex-row">
                 <div class="mr-2"><h6>Ubicación:</h6></div>
-                <div><h6 id="unoGuardarUbi"></h6></div>
+                <div><h6 id="guardarUbi1"></h6></div>
               </div>
             </div>
             <!--Partido 2 - Guardar-->
             <div class="mt-2 col-4 border my-2">
-              <h5>Partido 2</h5>
+              <h5 id="partido2">Partido 2</h5>
               <div class="mt-2 d-flex flex-row">
                 <div class="mr-2"><h6>Fecha y Hora:</h6></div>
-                <div><h6 id="dosGuardarFyH"></h6></div>
+                <div><h6 id="guardarFyH2"></h6></div>
               </div>
               <div class="mt-2 d-flex flex-row">
                 <div class="mr-2"><h6>Rival:</h6></div>
-                <div><h6 id="dosGuardarRival"></h6></div>
+                <div><h6 id="guardarRival2"></h6></div>
               </div>
               <div class="mt-2 d-flex flex-row">
                 <div class="mr-2"><h6>Ubicación:</h6></div>
-                <div><h6 id="dosGuardarUbi"></h6></div>
+                <div><h6 id="guardarUbi2"></h6></div>
               </div>
             </div>
             <!--Partido 3 - Guardar-->
             <div class="mt-2 col-4 border my-2">
-              <h5>Partido 3</h5>
+              <h5 id="partido3">Partido 3</h5>
               <div class="mt-2 d-flex flex-row">
                 <div class="mr-2"><h6>Fecha y Hora:</h6></div>
-                <div><h6 id="tresGuardarFyH"></h6></div>
+                <div><h6 id="guardarFyH3"></h6></div>
               </div>
               <div class="mt-2 d-flex flex-row">
                 <div class="mr-2"><h6>Rival:</h6></div>
-                <div><h6 id="tresGuardarRival"></h6></div>
+                <div><h6 id="guardarRival3"></h6></div>
               </div>
               <div class="mt-2 d-flex flex-row">
                 <div class="mr-2"><h6>Ubicación:</h6></div>
-                <div><h6 id="tresGuardarUbi"></h6></div>
+                <div><h6 id="guardarUbi3"></h6></div>
               </div>
             </div>
           </div>
           <div class="container-fluid text-center my-3">
             <button type="submit" class="btn btn-primary">Guardar</button>
           </div>
+          <div class="container-fluid p-0 d-flex mensajesDeGuardar">
+            <div class="mt-2 col-4 border my-2">
+              <h6>Estado:</h6>
+              <h6 id="mensajeDeGuardar1"></h6>
+            </div>
+            <div class="mt-2 col-4 border my-2">
+              <h6>Estado:</h6>
+              <h6 id="mensajeDeGuardar2"></h6>
+            </div>
+            <div class="mt-2 col-4 border my-2">
+              <h6>Estado:</h6>
+              <h6 id="mensajeDeGuardar3"></h6>
+            </div>
+          </div>
         </form>
       </article>
     </section>
+    <!-- Noticias - FireStore -->
+    <section class="sectionDeNoticias p-0">
+      <!-- Carga de Noticias -->
+      <article
+        class="container-fluid d-flex flex-column col-12 align-items-center"
+      >
+        <h2 class="my-3">Carga de Noticias</h2>
+        <form
+          action=""
+          class="d-flex flex-column col-12 col-md-6"
+          id="noticiaACargar"
+        >
+          <div>
+            <div>
+              <h4>Tener en cuenta:</h4>
+              <p>
+                Cada "Cuerpo de Noticia" tiene un máximo de 1500 caracteres, en
+                caso de exceder los 1500 caracteres completar los restantes en
+                el siguiente "Cuerpo de Noticia" <br />
+                Si el texto a colocar dentro de "Cuerpo de Noticia" es menor a
+                1500 caracteres y se van a utilizar si o si dos imágenes (imágen
+                principal e imagen secundaria) dividir el cuerpo de noticia en
+                2.
+              </p>
+            </div>
+            <div class="input-group input-group-sm mb-3">
+              <span class="input-group-text" id="inputGroup-sizing-default"
+                >Título</span
+              >
+              <input
+                type="text"
+                class="form-control"
+                aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-default"
+                id="tituloACargar"
+              />
+            </div>
+            <div class="input-group input-group-sm mb-3">
+              <span class="input-group-text" id="inputGroup-sizing-default"
+                >Imágen principal</span
+              >
+              <input
+                type="file"
+                class="form-control"
+                aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-default"
+                id="urlImagenPrincipalACargar"
+              />
+            </div>
+            <div class="form-floating mb-3">
+              <textarea
+                class="form-control"
+                maxlength="300"
+                placeholder="Copete"
+                id="copeteACargar"
+                style="height: 100px"
+              ></textarea>
+              <label for="floatingTextarea2">Copete</label>
+            </div>
+            <div class="form-floating mb-3">
+              <textarea
+                class="form-control"
+                maxlength="1300"
+                placeholder="Cuerpo de Noticia"
+                id="cuerpoNoticiaACargar"
+                style="height: 150px"
+              ></textarea>
+              <label for="floatingTextarea2">Cuerpo de Noticia</label>
+            </div>
+            <div class="form-floating mb-3">
+              <textarea
+                class="form-control"
+                maxlength="1300"
+                placeholder="Cuerpo de Noticia - Segunda parte"
+                id="cuerpoNoticiaACargar2"
+                style="height: 150px"
+              ></textarea>
+              <label for="floatingTextarea2"
+                >Cuerpo de Noticia - Segunda parte</label
+              >
+            </div>
+            <div class="input-group input-group-sm mb-3">
+              <span class="input-group-text" id="inputGroup-sizing-default"
+                >Imágen secundaria</span
+              >
+              <input
+                type="file"
+                class="form-control"
+                aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-default"
+                id="urlImagenSecundariaACargar"
+              />
+            </div>
+            <div class="d-flex flex-column align-items-center">
+              <h5>Seleccionar Categoría</h5>
+              <div
+                class="btn-group"
+                role="group"
+                aria-label="Basic radio toggle button group"
+              >
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="btnradio"
+                  id="categoriaI"
+                  autocomplete="off"
+                  checked
+                />
+                <label class="btn btn-outline-primary" for="categoriaI"
+                  >Inferiores</label
+                >
+
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="btnradio"
+                  id="categoriau19"
+                  autocomplete="off"
+                />
+                <label class="btn btn-outline-primary" for="categoriau19"
+                  >U 19</label
+                >
+
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="btnradio"
+                  id="categoriau21"
+                  autocomplete="off"
+                />
+                <label class="btn btn-outline-primary" for="categoriau21"
+                  >U 21</label
+                >
+
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="btnradio"
+                  id="categoriaP"
+                  autocomplete="off"
+                />
+                <label class="btn btn-outline-primary" for="categoriaP"
+                  >Primera Local</label
+                >
+
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="btnradio"
+                  id="categoriaLA"
+                  autocomplete="off"
+                />
+                <label class="btn btn-outline-primary" for="categoriaLA"
+                  >Liga Argentina</label
+                >
+              </div>
+            </div>
+            <div class="container-fluid text-center my-3">
+              <button type="submit" class="btn btn-primary">
+                Guardar Noticia
+              </button>
+            </div>
+          </div>
+        </form>
+        <div>
+          <h3 id="mensajeDeNoticia"></h3>
+        </div>
+      </article>
+      <!-- Vista Previa de Noticias -->
+      <article class="d-flex flex-column align-items-center">
+        <h2>Vista Previa de Noticias</h2>
+        <div
+          class="container-fluid row align-items-center p-0 contenedorNoticias"
+          id="divContenedorNoticias"
+        ></div>
+      </article>
+    </section>
+    <!-- Productos - FireStore -->
+    <section class="sectionDeProductos p-0">
+      <article class="d-flex flex-column align-items-center">
+        <h2 class="my-3">Carga de Productos</h2>
+        <form
+          action=""
+          class="d-flex flex-column col-12 col-md-6"
+          id="productoACargar"
+        >
+          <div class="input-group input-group-sm mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default"
+              >Título</span
+            >
+            <input
+              type="text"
+              class="form-control"
+              aria-label="Sizing example input"
+              aria-describedby="inputGroup-sizing-default"
+              id="tituloACargarProducto"
+            />
+          </div>
+          <div class="input-group input-group-sm mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default"
+              >Imágen</span
+            >
+            <input
+              type="file"
+              class="form-control"
+              aria-label="Sizing example input"
+              aria-describedby="inputGroup-sizing-default"
+              id="imagenProducto"
+            />
+          </div>
+          <div class="form-floating mb-3">
+            <textarea
+              class="form-control"
+              maxlength="200"
+              placeholder="Copete"
+              id="descripcionProducto"
+              style="height: 100px"
+            ></textarea>
+            <label for="floatingTextarea2">Descripción</label>
+          </div>
+          <div class="container-fluid text-center my-3">
+            <button type="submit" class="btn btn-primary">
+              Guardar Producto
+            </button>
+          </div>
+        </form>
+        <div>
+          <h3 id="mensajeDeProducto"></h3>
+        </div>
+      </article>
+      <article class="d-flex flex-column align-items-center p-0">
+        <h2 class="my-3">Vista Previa de Productos</h2>
+        <div
+          class="row align-items-center justify-content-evenly"
+          id="divContenedorProductos"
+        ></div>
+      </article>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="../js/backend.js"></script>
+    <script src="../js/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-storage-compat.js"></script>
+    <script src="../js/backendAdmin.js"></script>
   </body>
 </html>
