--- a/pages/backend.html
+++ b/pages/backend.html
@@ -20,13 +20,13 @@
       <h2>Racing de Chivilcoy - Backend</h2>
     </section>
     <section class="container-fluid d-flex justify-content-center my-3">
-      <form class="col-sm-10 col-10 col-md-4">
+      <form class="col-sm-10 col-10 col-md-4 text-center" id="loginForm">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Usuario</label>
           <input
-            type="email"
+            type="text"
             class="form-control"
-            id="exampleInputEmail1"
+            id="inputUsuario"
             aria-describedby="emailHelp"
           />
         </div>
@@ -34,26 +34,19 @@
           <label for="exampleInputPassword1" class="form-label"
             >Contraseña</label
           >
-          <input
-            type="password"
-            class="form-control"
-            id="exampleInputPassword1"
-          />
+          <input type="password" class="form-control" id="inputContraseña" />
         </div>
         <button type="submit" class="btn btn-primary">Entrar</button>
+        <div class="mt-3"><h4 id="mensajeDatosIncorrectos"></h4></div>
       </form>
     </section>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
+    <script src="../js/backend.js"></script>
   </body>
 </html>
