--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -52,195 +52,7 @@
         <button class="btn btn-sm btn-custom botonVerMas me-1 ms-1" onclick="filtrarNoticias('categoriaP')">Primera Local</button>
         <button class="btn btn-sm btn-custom botonVerMas me-1 ms-1" onclick="filtrarNoticias('categoriaLA')">Liga Argentina</button>
       </div>
-      <section class="container-fluid row align-items-center p-0 contenedorNoticias">
-        <!-- Noticia 1 -->
-        <div class=" todas noticiaItem categoriaI col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
-            <div class="noticias d-flex flex-column align-items-center text-center">
-              <img src="../media/WhatsApp Image 2024-09-02 at 15.40.18.jpeg" alt="" />
-              <h2 class="mt-3 mb-3">Festejo del Día de la Niñez en el Club Racing</h2>
-              <p>
-                El pasado domingo se llevó a cabo la primera fiesta de la niñez en el Estadio Norte – Julio C. Nicieza.<br>Desde las 15:00Hs, participaron más de 120 padres y otros tantos jugadores/as de la escuela de básquet del Club Racing.
-              </p>
-              <div>
-                <button type="button" class="btn btn-sm btn-custom botonVerMas" data-bs-toggle="modal" data-bs-target="#modalNoticia6">
-                  Ver más
-                </button>
-                <div class="modal fade" id="modalNoticia6" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                  <div class="modal-dialog modal-lg modal-dialog-scrollable">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">Festejo del Día de la Niñez en el Club Racing</h1>
-                        </div>
-                      <div class="modal-body clearfix">
-                        <img src="../media/WhatsApp Image 2024-09-02 at 15.40.18.jpeg" alt="" class="imagenModal col-md-6 float-md-end mb-3 ms-md-3 p-0">
-                        <p>
-                          El pasado domingo se llevó a cabo la primera fiesta de la niñez en el Estadio Norte – Julio C. Nicieza. <br> <br>
-                          Desde las 15:00Hs, participaron más de 120 padres y otros tantos jugadores/as de la escuela de básquet del Club Racing. <br> <br>
-                          Se realizaron varios juegos de la disciplina acompañados de profesores, cuerpo técnico y la compañía especial de los jugadores de Liga Argentina 2024/25. <br> <br>
-                          También hubo espectáculos, malabares, juegos en donde también participaron los padres, música, sorteos y mucha diversión. <br> <br>
-                          Para finalizar la tarde, compartieron entre todos una gran merienda. <br> <br>
-                          Felicitamos al cuerpo técnico, familias y jugadores del club por hacer que estas iniciativas sean posibles con el único fin de fomentar el desarrollo deportivo. <br> <br>
-                        </p>
-                        </div>
-                      <div class="modal-footer d-flex justify-content-center">
-                        <button type="button" class="btn btn-sm btn-secondary botonVerMas" data-bs-dismiss="modal">Cerrar</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-        </div>
-        <!-- Noticia 2 -->
-        <div class=" todas noticiaItem categoriau19 col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
-            <div class="noticias d-flex flex-column align-items-center text-center">
-              <img src="../media/img12.jpg" alt="" />
-              <h2 class="mt-3 mb-3">U 19</h2>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quam aperiam mollitia! Magni nisi repudiandae sapiente dolorum. Minima dolore consequuntur laborum sint minus consectetur. Id, maxime. Repudiandae laborum saepe praesentium.
-              </p>
-              <div>
-                <button type="button" class="btn btn-sm btn-custom botonVerMas" data-bs-toggle="modal" data-bs-target="#modalNoticia5">
-                  Ver más
-                </button>
-                <div class="modal fade" id="modalNoticia5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                  <div class="modal-dialog modal-dialog-scrollable">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">U 19</h1>
-                      </div>
-                      <div class="modal-body">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quam aperiam mollitia! Magni nisi repudiandae sapiente dolorum. Minima dolore consequuntur laborum sint minus consectetur. Id, maxime. Repudiandae laborum saepe praesentium.
-                      </div>
-                      <div class="modal-footer d-flex justify-content-center">
-                        <button type="button" class="btn btn-sm btn-secondary botonVerMas" data-bs-dismiss="modal">Cerrar</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-        </div>
-        <!-- Noticia 3 -->
-        <div class=" todas noticiaItem categoriau21 col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
-            <div class="noticias d-flex flex-column align-items-center text-center">
-              <img src="../media/img12.jpg" alt="" />
-              <h2 class="mt-3 mb-3">U 21</h2>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quam aperiam mollitia! Magni nisi repudiandae sapiente dolorum. Minima dolore consequuntur laborum sint minus consectetur. Id, maxime. Repudiandae laborum saepe praesentium.
-              </p>
-              <div>
-                <button type="button" class="btn btn-sm btn-custom botonVerMas" data-bs-toggle="modal" data-bs-target="#modalNoticia4">
-                  Ver más
-                </button>
-                <div class="modal fade" id="modalNoticia4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                  <div class="modal-dialog modal-dialog-scrollable">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">U 21</h1>
-                        </div>
-                      <div class="modal-body">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quam aperiam mollitia! Magni nisi repudiandae sapiente dolorum. Minima dolore consequuntur laborum sint minus consectetur. Id, maxime. Repudiandae laborum saepe praesentium.
-                      </div>
-                      <div class="modal-footer d-flex justify-content-center">
-                        <button type="button" class="btn btn-sm btn-secondary botonVerMas" data-bs-dismiss="modal">Cerrar</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-        </div>
-        <!-- Noticia 4 -->
-        <div class=" todas noticiaItem categoriaP col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
-            <div class="noticias d-flex flex-column align-items-center text-center">
-              <img src="../media/img12.jpg" alt="" />
-              <h2 class="mt-3 mb-3">Primera Local</h2>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quam aperiam mollitia! Magni nisi repudiandae sapiente dolorum. Minima dolore consequuntur laborum sint minus consectetur. Id, maxime. Repudiandae laborum saepe praesentium.
-              </p>
-              <div>
-                <button type="button" class="btn btn-sm btn-custom botonVerMas" data-bs-toggle="modal" data-bs-target="#modalNoticia3">
-                  Ver más
-                </button>
-                <div class="modal fade" id="modalNoticia3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                  <div class="modal-dialog modal-dialog-scrollable">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">Primera Local</h1>
-                        </div>
-                      <div class="modal-body">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quam aperiam mollitia! Magni nisi repudiandae sapiente dolorum. Minima dolore consequuntur laborum sint minus consectetur. Id, maxime. Repudiandae laborum saepe praesentium.
-                      </div>
-                      <div class="modal-footer d-flex justify-content-center">
-                        <button type="button" class="btn btn-sm btn-secondary botonVerMas" data-bs-dismiss="modal">Cerrar</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-        </div>
-        <!-- Noticia 5 -->
-        <div class=" todas noticiaItem categoriaLA col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
-            <div class="noticias d-flex flex-column align-items-center text-center">
-              <img src="../media/img12.jpg" alt="" />
-              <h2 class="mt-3 mb-3">Liga Argentina</h2>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quam aperiam mollitia! Magni nisi repudiandae sapiente dolorum. Minima dolore consequuntur laborum sint minus consectetur. Id, maxime. Repudiandae laborum saepe praesentium.
-              </p>
-              <div>
-                <button type="button" class="btn btn-sm btn-custom botonVerMas" data-bs-toggle="modal" data-bs-target="#modalNoticia2">
-                  Ver más
-                </button>
-                <div class="modal fade" id="modalNoticia2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                  <div class="modal-dialog modal-dialog-scrollable">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">Liga Argentina</h1>
-                        </div>
-                      <div class="modal-body">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quam aperiam mollitia! Magni nisi repudiandae sapiente dolorum. Minima dolore consequuntur laborum sint minus consectetur. Id, maxime. Repudiandae laborum saepe praesentium.
-                      </div>
-                      <div class="modal-footer d-flex justify-content-center">
-                        <button type="button" class="btn btn-sm btn-secondary botonVerMas" data-bs-dismiss="modal">Cerrar</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-        </div>
-        <!-- Noticia 6 -->
-        <div class=" todas noticiaItem categoriaLA col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 my-2">
-            <div class="noticias d-flex flex-column align-items-center text-center">
-              <img src="../media/img12.jpg" alt="" />
-              <h2 class="mt-3 mb-3">Liga Argentina</h2>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quam aperiam mollitia! Magni nisi repudiandae sapiente dolorum. Minima dolore consequuntur laborum sint minus consectetur. Id, maxime. Repudiandae laborum saepe praesentium.
-              </p>
-              <div>
-                <button type="button" class="btn btn-sm btn-custom botonVerMas" data-bs-toggle="modal" data-bs-target="#modalNoticia1">
-                  Ver más
-                </button>
-                <div class="modal fade" id="modalNoticia1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                  <div class="modal-dialog modal-dialog-scrollable">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">Liga Argentina</h1>
-                        </div>
-                      <div class="modal-body">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur quam aperiam mollitia! Magni nisi repudiandae sapiente dolorum. Minima dolore consequuntur laborum sint minus consectetur. Id, maxime. Repudiandae laborum saepe praesentium.
-                      </div>
-                      <div class="modal-footer d-flex justify-content-center">
-                        <button type="button" class="btn btn-sm btn-secondary botonVerMas" data-bs-dismiss="modal">Cerrar</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-        </div>
+      <section class="container-fluid row align-items-center p-0 contenedorNoticias" id="contenedorNoticias">
       </section>
     </main>
     <footer>
@@ -272,8 +84,10 @@
               </a>
             </div>
             <!-- TikTok -->
-            <div hidden class="col"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tiktok" viewBox="0 0 16 16">
-              <path d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"/></svg>
+            <div class="col d-flex justify-content-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#131748" class="bi bi-tiktok" viewBox="0 0 16 16">
+              <a href="https://www.tiktok.com/@racingchivilcoybasquet" target="_blank" rel="noopener noreferrer">
+                <path fill="#131748" d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"/></svg>
+              </a>
             </div>
           </div>
           <!-- Escudo Racing -->
@@ -335,8 +149,10 @@
                 </a>
               </div>
               <!-- TikTok -->
-              <div hidden class="col p-0 my-2"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tiktok" viewBox="0 0 16 16">
-                <path d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"/></svg>
+              <div class="col p-0 my-2 d-flex justify-content-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#131748" class="bi bi-tiktok" viewBox="0 0 16 16">
+                <a href="https://www.tiktok.com/@racingchivilcoybasquet" target="_blank" rel="noopener noreferrer">
+                  <path fill="#131748" d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3z"/></svg>
+                </a>
               </div>
               <!-- Liga Chivilcoyana -->
               <div class="col p-0 my-2 d-flex justify-content-center">
@@ -360,7 +176,16 @@
           </article>
         </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="../js/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-storage-compat.js"></script>
     <script src="../js/noticias.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
