--- a/pages/backend.admin.html
+++ b/pages/backend.admin.html
@@ -441,6 +441,69 @@
             ></textarea>
             <label for="floatingTextarea2">Descripción</label>
           </div>
+          <div>
+            <h4>Imágenes secundarias</h4>
+          </div>
+          <div class="input-group input-group-sm mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default"
+              >Imágen 2</span
+            >
+            <input
+              type="file"
+              class="form-control"
+              aria-label="Sizing example input"
+              aria-describedby="inputGroup-sizing-default"
+              id="imagenProducto2"
+            />
+          </div>
+          <div class="input-group input-group-sm mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default"
+              >Imágen 3</span
+            >
+            <input
+              type="file"
+              class="form-control"
+              aria-label="Sizing example input"
+              aria-describedby="inputGroup-sizing-default"
+              id="imagenProducto3"
+            />
+          </div>
+          <div class="input-group input-group-sm mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default"
+              >Imágen 4</span
+            >
+            <input
+              type="file"
+              class="form-control"
+              aria-label="Sizing example input"
+              aria-describedby="inputGroup-sizing-default"
+              id="imagenProducto4"
+            />
+          </div>
+          <div class="input-group input-group-sm mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default"
+              >Imágen 5</span
+            >
+            <input
+              type="file"
+              class="form-control"
+              aria-label="Sizing example input"
+              aria-describedby="inputGroup-sizing-default"
+              id="imagenProducto5"
+            />
+          </div>
+          <div class="input-group input-group-sm mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default"
+              >Imágen 6</span
+            >
+            <input
+              type="file"
+              class="form-control"
+              aria-label="Sizing example input"
+              aria-describedby="inputGroup-sizing-default"
+              id="imagenProducto6"
+            />
+          </div>
           <div class="container-fluid text-center my-3">
             <button type="submit" class="btn btn-primary">
               Guardar Producto
