--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -45,7 +45,7 @@
       <h1 class="mt-3 mb-3">Noticias</h1>
       <!-- Botonera Filtros -->
       <div class="container-fluid d-flex justify-content-evenly mt-3 mb-3 p-0">
-        <button class="btn btn-sm btn-custom botonVerMas me-1 ms-1" onclick="filtrarNoticias('todas')">Todas</button>
+        <button class="btn btn-sm btn-custom botonVerMas me-1 ms-1 filtroActivo" onclick="filtrarNoticias('todas')">Todas</button>
         <button class="btn btn-sm btn-custom botonVerMas me-1 ms-1" onclick="filtrarNoticias('categoriaI')">Inferiores</button>
         <button class="btn btn-sm btn-custom botonVerMas me-1 ms-1" onclick="filtrarNoticias('categoriau19')">U 19</button>
         <button class="btn btn-sm btn-custom botonVerMas me-1 ms-1" onclick="filtrarNoticias('categoriau21')">U 21</button>
